# gilded-rose-refactoring-python-kata

./: .gitignore  .replit  LICENSE  Makefile  README.md  gilded_rose.py  item.py  pyproject.toml  replit.nix  test_gilded_rose.py  test_something.py
.github/workflows/: main.yml
