[tool.poetry]
name = "gilded-rose-refactoring-python-kata"
version = "1.0.0"
description = "Gilded Rose refactoring kata in Python"
authors = ["Coding Cuddles"]

[tool.poetry.dependencies]
python = ">=3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.15.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
