[project]
name = "gilded-rose-refactoring-python-kata"
version = "1.0.0"
description = "Gilded Rose refactoring kata in Python"
authors = [{ name = "Codding Cuddles" }]
requires-python = ">=3.8"

dependencies = [
    "pytest>=8.0",
    "ruff>=0.11.0"
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
